fix: Sprint 8 - Исправление привязки Telegram бота
🔧 Исправления:
- Добавлен публичный endpoint /telegram/public/verify-code для бота
- Исправлена ошибка 401 Unauthorized при привязке через бота
- Telegram bot теперь использует публичный API без JWT авторизации
- Добавлен метод getLinkCode в TelegramService
- Исправлен баг с req.user.id -> req.user.userId в TelegramController
- Добавлено детальное логирование для отладки

📝 Изменения в Sprint 8:
- Реализована полная система Telegram уведомлений
- Автоматический перевод резервистов в основную группу
- Уведомления участникам, экскурсоводам и админам
- Кнопки отмены записи для участников и гидов
- Интеграция с bookings service

📚 Документация:
- Добавлены отчёты и руководства по Sprint 8
- SPRINT_8_REPORT.md - полный отчет о выполнении
- SPRINT_8_CHANGES.md - технические изменения
- TELEGRAM_SETUP_GUIDE.md - руководство по настройке
- QUICK_START_SPRINT8.md - быстрый старт

--- a/backend/env.example
+++ b/backend/env.example
@@ -22,3 +22,6 @@ NODE_ENV=development
 
 # CORS
 FRONTEND_URL=http://localhost:3011
+
+# Telegram Bot
+TELEGRAM_BOT_TOKEN=your-telegram-bot-token-here
