--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "@nestjs/typeorm": "^10.0.1",
     "@types/csurf": "^1.11.5",
     "@types/helmet": "^0.0.48",
+    "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
